# devdox-ai-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
app/: config.py  logging_config.py  main.py
app/exceptions/: custom_exceptions.py  exception_constants.py  register.py
app/infrastructure/: base_processor.py  queue_consumer.py  supabase_queue.py  temporary_fastapi_message_schema.py
app/infrastructure/mailing_service/: constants.py  container.py
app/infrastructure/mailing_service/client/: client.py
app/infrastructure/mailing_service/models/: context_shapes.py
app/infrastructure/mailing_service/service/: email_service.py  template_resolver.py
app/infrastructure/qna/: qna_generator.py  qna_models.py
app/infrastructure/qna/formatters/: qna_formatter_text.py
app/infrastructure/queue_job_tracker/: job_trace_metadata.py  job_tracker.py
app/infrastructure/request_recorder/: middleware.py
app/instance/: .env.example
app/repositories/: api_key.py  code_chunks.py  git_label.py  repo.py
app/routes/: __init__.py  analyze_code.py  health_check.py  load_test.py  qna.py
app/schemas/: analyze.py  git_label.py  load_test.py  qna.py  repo.py
app/services/: analyze.py  api_test_generator.py  load_test.py  load_test_processor.py  qna.py
app/templates/email/: project_analysis_success.txt  project_qna.html  project_qna.txt  project_qna_failure.html  project_qna_failure.txt
app/utils/: auth.py  constants.py  encryption.py  rate_limiting.py
