[tool.setuptools]
packages = ["app"]

[project]
name = "devdox-ai-agent"
version = "0.0.1"
description = "devdox-ai-agent is an MCP server to answer the user"
requires-python = ">=3.12"
dependencies = [
   # Core dependencies
   "autopep8==2.3.2",
   "click==8.2.1",
   "tortoise-orm>=0.20.0",
   "asyncpg>=0.28.0",
   "aerich>=0.7.2",
   "fastapi==0.115.12",
   "fastapi-cli==0.0.7",
   "starlette==0.46.2",
   "fastapi-mcp==0.4.0",
   "uvicorn==0.34.2",
   "uvloop==0.21.0; sys_platform != 'win32'",
   "markdown-it-py==3.0.0",
   "mdurl==0.1.2",
   "packaging>=23.2,<25",
   "pathspec==0.12.1",
   "platformdirs==4.3.8",
   "pycodestyle==2.14.0",
   "pygments==2.19.2",
   "python-dotenv==1.1.1",
   "rich==14.0.0",
   "setuptools==80.9.0",
   "shellingham==1.5.4",
   "stdlib-list==0.11.1",
   "typer==0.12.3",
   "typing_extensions==4.14.1",
   "watchdog==6.0.0",
   "clerk-backend-api==2.2.0",
   "pydantic==2.12.0",
   "pydantic-settings==2.10.1",
   "pydantic_core==2.41.1",
   "email_validator==2.2.0",
   "tembo-pgmq-python==0.10.0",
   #models
   "devdox-ai-models @ git+https://github.com/montymobile1/devdox-ai-models.git@a34f8d1",
   # Encryption package
   "devdox-ai-encryption @ git+https://github.com/montymobile1/devdox-ai-encryption.git@4eefae1",
   "devdox-ai-git @ git+https://github.com/montymobile1/devdox-ai-git.git@c56278d",
   "devdox-ai-locust==0.1.2",
   "locust==2.0.0",
   "langchain-together==0.3.0",
   "together==1.5.17",
   "cohere==5.18.0",
   "fastapi-mail==1.5.1"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy_extensions==1.1.0",
    "pytest",
    "coverage"
]


[tool.poetry.extras]
dev = ["pytest", "coverage"]
